2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	Patch by Kai Tetzlaff <kai.tetzlaff@web.de>

	Add the view-tag and vob-tag to the vc-dir listing.

	* vc-clearcase.el (clearcase-view-tag-for-path)
	(clearcase-dir-format-extra-header)
	(vc-clearcase-dir-extra-headers): new functions.

2010-08-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	Patch by Kai Tetzlaff <kai.tetzlaff@web.de>

	Recognize special selection and missing files

	* vc-clearcase.el (clearcase-fprop-missing-p): new function
	(clearcase-fprop): add 'missing and 'special-selection to STATUS
	slot.
	(clearcase-set-fprop-version-stage-1): recognize "special
	selection" and missing files
	(clearcase-set-fprop-version-stage-2): only overwrite the FPROP
	STATUS when file is checked out.
	(vc-clearcase-registered): recognize special selection files.
	(vc-clearcase-state-heuristic, clearcase-default-mode-line) :
	report the MISSING state
	(vc-clearcase-what-version): report the MISSING and
	SPECIAL-SELECTION states

2010-07-18  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-version): 487 updated to 4.5-pre

2010-07-16  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* release 3.4

2010-07-01  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-setup-vprop, vc-clearcase-root): try
	to determine the view root even in dynamic views.

2010-06-18  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-annotate-date-format)
	(clearcase-annotate-user-width)
	(clearcase-annotate-version-width): new variables.
	(vc-clearcase-annotate-command): use
	`clearcase-annotate-user-width' in the format string sent to
	cleartool
	(clearcase-annotate-post-process): re-written to do a single pass
	over the annotate buffer also uses user defined date format and
	width fields for the version and user.
	(clearcase-annotate-search-for-property): new function.
	(vc-clearcase-annotate-time)
	(vc-clearcase-annotate-extract-revision-at-line): use it